--- a/6-Battle/6.0.md
+++ b/6-Battle/6.0.md
@@ -1,24 +1,25 @@
-# 6. Battle
+# **6. Battle**
 
-This chapter will try to explain in more detail all the steps of combat between players and monsters. It will thus also serve as a summary of all the various information and formulas throughout the guide that handle combat. Information in this chapter can generally all be found in other chapters. It is thus advisable to read this chapter together with the rest of the guide, as other chapters may have additional information that clarifies any situation.
+This chapter provides a detailed breakdown of combat mechanics between players and monsters. It also serves as a summary of various combat-related formulas and mechanics covered throughout the guide. While much of this information can be found in other chapters, this section presents it in a structured way to clarify how different aspects of battle interact.
 
-As melee is treated differently than other attacks by the game, so will this chapter do (normal arrows are treated the same as spells). There is also quite a difference in who is the attacker and who is the target. There are four different situations, and this chapter will try to explain each of them.
+Melee attacks are handled differently than other attack types, such as ranged attacks and spells. This chapter follows the game's mechanics by distinguishing between them. Additionally, combat scenarios vary depending on who the attacker and the target are. There are four main combat interactions:
 
-Player versus Monster
+- **Player vs. Monster**
+- **Monster vs. Player**
+- **Player vs. Player**
+- **Monster vs. Monster**
 
-Monster versus Player
+The **Monster vs. Monster** category primarily concerns golems, but in *Hellfire*, it also applies to berserk monsters. Traps follow the same mechanics as monster attacks when they damage players, so they are covered under **Monster vs. Player**.
 
-Player versus Player
+## **Combat Update Order**
+The game processes combat interactions in a fixed sequence. Players are always updated before monsters, meaning that if a player and a monster attack at the same time, the player's attack will register first. If multiple players attack simultaneously, the order is determined by their entry sequence into the game. If a player leaves, a new player takes their place in the update order.
 
-Monster versus Monster
+The game updates combat interactions every **0.05 seconds**, which is why all timing-related mechanics (such as attack delays) are measured in increments of **0.05 seconds**.
 
-Monster versus Monster is mainly about the golem, but in Hellfire it also takes care of berserk monsters. Traps are also treated as monsters in this chapter; that is, if a trap hits a player, it is explained under Monster versus Player.
+The update sequence is as follows:
 
-As players are always updated before monsters, the player will always get in a hit first, should a monster and a player both hit at the same time. For players, the order would be in the order they have entered a game (with the exception that if someone leaves a game, a new player will take that one’s place in the order). The order of updating is as follows:
+1. **Players**
+2. **Monsters**
+3. **Magical Effects** (including arrows, spells, and other projectiles)
 
-1. Players
-
-1. Monsters
-1. Magical effects (includes arrows)
-
-The update is done once every 0.05 seconds which explains why all timing information is given in steps of 0.05 seconds.
+Each of these steps is processed every **0.05 seconds**, determining the exact order in which attacks land and effects apply.
